--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 ext {
     coroutinesVersion = '1.5.2'
     wordPressUtilsVersion = '2.3.0'
-    wordPressLoginVersion = 'trunk-3f8bfa7e2c5af8daa9ae1cfc391cd6c5fa0ca4d5'
+    wordPressLoginVersion = '0.0.9'
     gutenbergMobileVersion = 'v1.71.1'
     storiesVersion = '1.2.1'
     aboutAutomatticVersion = '0.0.4'
@@ -14,7 +14,7 @@ ext {
     androidxWorkVersion = "2.4.0"
 
     daggerVersion = '2.29.1'
-    fluxCVersion = 'trunk-de82b3be1964375835c06f9b5d0c060a216373ee'
+    fluxCVersion = '0.9.0'
 
     appCompatVersion = '1.0.2'
     coreVersion = '1.3.2'
